# SHG_dev

./: .gitignore  README.md  SomeSHGStuff.ipynb  pyproject.toml  updates.txt
Chunli Workspace/: Current Version.txt  README.md  StartGui.py
shg_simulation/: __init__.py  check_repo_files.py  data_fitting.py  gui_classes.py  gui_html_boxes.py  gui_layouts.py  shg_gui.py  utils.py
shg_simulation/configs/: darwin_config.yaml
shg_simulation/data/: default_crystals.yaml  point_groups.yaml
shg_simulation/fits/: default_fits.yaml
shg_simulation/gui/: __init__.py  data_fitting.py  fitting.py  gui_classes.py  init_gui.py  linux_gui.py  mac_gui.py  utils.py  windows_gui.py
shg_simulation/gui/ref_txt/: background.md  sim.md
shg_simulation/ref_txt/: about.md
shg_simulation/src/: __init__.py  check_repo_files.py  custom_widgets.py  data_classes.py  data_fitting.py  gui_html_boxes.py  gui_layouts.py  shg_gui.py  startup.py  sys_config.py  utils.py
shg_simulation/style_sheets/: darwin_styles.qss
shg_simulation/styles/: darwin_styles.qss
styles/: darwin_styles.qss
